--- a/composer.json
+++ b/composer.json
@@ -14,15 +14,27 @@
         "composer/installers": "^1.0.20",
         "cweagans/composer-patches": "^1.0",
         "drupal-composer/drupal-scaffold": "^2.0.1",
+        "drupal/admin_toolbar": "^1.23",
+        "drupal/bootstrap_barrio": "^4.10",
+        "drupal/bootstrap_library": "^1.11",
         "drupal/config_direct_save": "^1.0",
         "drupal/config_installer": "^1.0",
         "drupal/console": "^1",
         "drupal/core": "^8",
+        "drupal/environment_indicator": "^3.3",
+        "drupal/google_analytics": "^2.2",
+        "drupal/metatag": "^1.5",
+        "drupal/pathauto": "^1.2",
+        "drupal/recaptcha": "^2.3",
+        "drupal/redirect": "^1.2",
+        "drupal/schema_metatag": "^1.2",
         "drupal/simple_block": "^1.0@beta",
-        "drush/drush": "~8",
-        "rvtraveller/qs-composer-installer": "^1.1",
+        "drupal/token_filter": "^1.0@beta",
+        "drupal/webform": "^5.0@RC",
         "drush-ops/behat-drush-endpoint": "^0.0.5",
+        "drush/drush": "~8",
         "pantheon-systems/quicksilver-pushback": "~1",
+        "rvtraveller/qs-composer-installer": "^1.1",
         "webflo/drupal-core-strict": "^8"
     },
     "require-dev": {
