--- a/config/local.settings.yml
+++ b/config/local.settings.yml
@@ -24,6 +24,7 @@ features:
   favicon: true
 logo:
   use_default: false
+  path: 'public://pakmail-logo.png'
 favicon:
   use_default: true
 bootstrap_barrio_library: cdn
