--- a/.gitignore
+++ b/.gitignore
@@ -104,6 +104,9 @@ Thumbs.db
 # Things in the core directory that Drupal 8 commits in the repository.
 !web/core/**/*.gz
 
+# GULP #
+node_modules
+
 # IDE
 .vscode
 
