--- a/composer.json
+++ b/composer.json
@@ -14,21 +14,28 @@
         "composer/installers": "^1.0.20",
         "cweagans/composer-patches": "^1.0",
         "drupal-composer/drupal-scaffold": "^2.0.1",
+        "drupal/address": "^1.4",
         "drupal/admin_toolbar": "^1.23",
+        "drupal/block_class": "^1.0@alpha",
         "drupal/bootstrap_barrio": "^4.10",
         "drupal/bootstrap_library": "^1.11",
+        "drupal/bootstrap_sass": "^1.1",
         "drupal/config_direct_save": "^1.0",
         "drupal/config_installer": "^1.0",
         "drupal/console": "^1",
         "drupal/core": "^8",
+        "drupal/ctools": "^3.0",
+        "drupal/devel": "^1.2",
         "drupal/environment_indicator": "^3.3",
         "drupal/google_analytics": "^2.2",
         "drupal/metatag": "^1.5",
         "drupal/pathauto": "^1.2",
         "drupal/recaptcha": "^2.3",
         "drupal/redirect": "^1.2",
+        "drupal/reroute_email": "^1.0",
         "drupal/schema_metatag": "^1.2",
         "drupal/simple_block": "^1.0@beta",
+        "drupal/social_media_links": "^2.6",
         "drupal/token_filter": "^1.0@beta",
         "drupal/webform": "^5.0@RC",
         "drush-ops/behat-drush-endpoint": "^0.0.5",
@@ -90,6 +97,11 @@
             "web/profiles/contrib/{$name}": ["type:drupal-profile"],
             "web/themes/contrib/{$name}": ["type:drupal-theme"],
             "drush/contrib/{$name}": ["type:drupal-drush"]
+        },
+        "patches": {
+            "drupal/bootstrap_barrio": {
+                "Fontawesome 4.7 Update": "https://www.drupal.org/files/issues/2018-06-08/fontawesome-2978386-1.patch"
+            }
         },
         "build-env": {
             "install-cms": [
