AB03-14 Contact page top content.

--- a/config/core.extension.yml
+++ b/config/core.extension.yml
@@ -3,6 +3,7 @@ module:
   automated_cron: 0
   big_pipe: 0
   block: 0
+  block_class: 0
   bootstrap_library: 0
   breakpoint: 0
   captcha: 0
@@ -39,6 +40,7 @@ module:
   rdf: 0
   recaptcha: 0
   redirect: 0
+  reroute_email: 0
   schema_metatag: 0
   search: 0
   shortcut: 0
@@ -57,6 +59,7 @@ module:
   webform_ui: 0
   menu_link_content: 1
   pathauto: 1
+  webform_bootstrap: 1
   views: 10
   standard: 1000
 theme:
