AB03-14 Updated h1-h6 font family, colors, size, padding. Added pakmail colors and configured local theme to use correct background colors.

--- a/config/block.block.local_branding.yml
+++ b/config/block.block.local_branding.yml
@@ -3,9 +3,13 @@ langcode: en
 status: true
 dependencies:
   module:
+    - block_class
     - system
   theme:
     - local
+third_party_settings:
+  block_class:
+    classes: ''
 _core:
   default_config_hash: NDwadleLD3YVSbDUaakxyYZyINYtkFtOVGShfq4kWy8
 id: local_branding
@@ -20,6 +24,6 @@ settings:
   provider: system
   label_display: '0'
   use_site_logo: true
-  use_site_name: true
-  use_site_slogan: true
+  use_site_name: false
+  use_site_slogan: false
 visibility: {  }
