--- a/config/webform.webform.contact.yml
+++ b/config/webform.webform.contact.yml
@@ -99,7 +99,7 @@ settings:
   entity_limit_user_interval: null
   purge: none
   purge_days: null
-  results_disabled: false
+  results_disabled: true
   results_disabled_ignore: false
   token_update: false
 access:
