--- a/config/core.entity_view_display.node.page.next_topic_text.yml
+++ b/config/core.entity_view_display.node.page.next_topic_text.yml
@@ -1,8 +1,9 @@
-uuid: f3257112-152e-42a1-8a1e-98fbf0415f84
+uuid: a88e279e-c82b-4ad1-a4f4-306894d5219b
 langcode: en
 status: true
 dependencies:
   config:
+    - core.entity_view_mode.node.next_topic_text
     - field.field.node.page.body
     - field.field.node.page.field_hero_text
     - field.field.node.page.field_image
@@ -11,30 +12,26 @@ dependencies:
     - field.field.node.page.field_previous
     - node.type.page
   module:
-    - text
     - user
 _core:
   default_config_hash: g1S3_GLaxq4l3I9RIca5Mlz02MxI2KmOquZpHw59akM
-id: node.page.default
+id: node.page.next_topic_text
 targetEntityType: node
 bundle: page
-mode: default
+mode: next_topic_text
 content:
-  body:
-    label: hidden
-    type: text_default
+  field_pager_caption:
+    type: string
     weight: 0
     region: content
-    settings: {  }
-    third_party_settings: {  }
-  links:
-    weight: 1
-    region: content
-    settings: {  }
+    label: hidden
+    settings:
+      link_to_entity: false
     third_party_settings: {  }
 hidden:
+  body: true
   field_hero_text: true
   field_image: true
   field_next: true
-  field_pager_caption: true
   field_previous: true
+  links: true
