AB03-14 Previous/Next block configurations, configured fontawesome, previous/next help text styling, made h tags bold.

--- a/config/local.settings.yml
+++ b/config/local.settings.yml
@@ -27,7 +27,7 @@ logo:
   path: 'public://pakmail-logo.png'
 favicon:
   use_default: true
-bootstrap_barrio_library: production
+bootstrap_barrio_library: cdn
 bootstrap_barrio_sidebar_collapse: 0
 bootstrap_barrio_navbar_top_navbar: 0
 bootstrap_barrio_navbar_top_affix: 0
@@ -36,5 +36,5 @@ bootstrap_barrio_sidebar_first_affix: 0
 bootstrap_barrio_sidebar_second_affix: 0
 bootstrap_barrio_scroll_spy: ''
 bootstrap_barrio_google_fonts: ''
-bootstrap_barrio_icons: ''
+bootstrap_barrio_icons: fontawesome
 bootstrap_barrio_system_messages: messages_light
