--- a/config/block.block.local_page_title.yml
+++ b/config/block.block.local_page_title.yml
@@ -2,14 +2,20 @@ uuid: 9c4104d0-8536-4aad-b04f-3973464b6da2
 langcode: en
 status: true
 dependencies:
+  module:
+    - block_class
+    - system
   theme:
     - local
+third_party_settings:
+  block_class:
+    classes: ''
 _core:
   default_config_hash: 7rR9chwXvdM2H8OYMAYx9Zj3GGlPMrZp_M3ZA4thYTk
 id: local_page_title
 theme: local
 region: content
-weight: -8
+weight: -9
 provider: null
 plugin: page_title_block
 settings:
@@ -17,4 +23,9 @@ settings:
   label: 'Page title'
   provider: core
   label_display: '0'
-visibility: {  }
+visibility:
+  request_path:
+    id: request_path
+    pages: '<front>'
+    negate: true
+    context_mapping: {  }
