AB03-33 Changed pink background elements to light gray, fixed hr elements on management page, reduced h3 spacing on FAQ page, configured 'Why a Pakmail Franchise' block to be on front-page only.

--- a/config/block.block.whyapakmailfranchise.yml
+++ b/config/block.block.whyapakmailfranchise.yml
@@ -7,6 +7,7 @@ dependencies:
   module:
     - block_class
     - simple_block
+    - system
   theme:
     - local
 third_party_settings:
@@ -23,4 +24,9 @@ settings:
   label: 'Why a Pak Mail Franchise?'
   provider: simple_block
   label_display: visible
-visibility: {  }
+visibility:
+  request_path:
+    id: request_path
+    pages: '<front>'
+    negate: false
+    context_mapping: {  }
