--- a/config/block.block.entityviewcontent_2.yml
+++ b/config/block.block.entityviewcontent_2.yml
@@ -9,11 +9,11 @@ dependencies:
     - local
 third_party_settings:
   block_class:
-    classes: ''
+    classes: col-md-6
 id: entityviewcontent_2
 theme: local
 region: featured_bottom_first
-weight: -6
+weight: -12
 provider: null
 plugin: 'entity_view:node'
 settings:
