--- a/config/metatag.metatag_defaults.node.yml
+++ b/config/metatag.metatag_defaults.node.yml
@@ -8,5 +8,6 @@ id: node
 label: Content
 tags:
   title: '[node:title] | [site:name]'
-  description: '[node:summary]'
   canonical_url: '[node:url]'
+  description: '[node:summary]'
+  image_src: 'https://franchise.pakmail.com/sites/default/files/pakmail-logo.png'
