--- a/config/webform.webform.franchise_application.yml
+++ b/config/webform.webform.franchise_application.yml
@@ -1,4 +1,3 @@
-uuid: 011fd5d7-3694-4b3c-8507-2a68a44fc044
 langcode: en
 status: open
 dependencies: {  }
@@ -6,6 +5,7 @@ open: null
 close: null
 uid: 1
 template: false
+archive: false
 id: franchise_application
 title: 'Franchise Application'
 description: 'Full application for franchising.'
@@ -46,10 +46,13 @@ settings:
   submission_label: ''
   submission_log: false
   submission_user_columns: {  }
+  submission_user_duplicate: false
   submission_login: false
   submission_login_message: ''
   submission_exception_message: ''
   submission_locked_message: ''
+  previous_submission_message: ''
+  previous_submissions_message: ''
   autofill: false
   autofill_message: ''
   autofill_excluded_elements: {  }
@@ -67,6 +70,7 @@ settings:
   preview_attributes: {  }
   preview_excluded_elements: {  }
   preview_exclude_empty: true
+  preview_exclude_empty_checkbox: false
   draft: none
   draft_multiple: false
   draft_auto_save: false
@@ -157,14 +161,15 @@ handlers:
       cc_options: {  }
       bcc_mail: ''
       bcc_options: {  }
-      from_mail: default
+      from_mail: _default
       from_options: {  }
-      from_name: default
-      subject: default
-      body: default
+      from_name: _default
+      subject: _default
+      body: _default
       excluded_elements: {  }
       ignore_access: false
       exclude_empty: true
+      exclude_empty_checkbox: false
       html: true
       attachments: false
       twig: false
@@ -189,14 +194,15 @@ handlers:
       cc_options: {  }
       bcc_mail: ''
       bcc_options: {  }
-      from_mail: default
+      from_mail: _default
       from_options: {  }
-      from_name: default
-      subject: default
-      body: default
+      from_name: _default
+      subject: _default
+      body: _default
       excluded_elements: {  }
       ignore_access: false
       exclude_empty: true
+      exclude_empty_checkbox: false
       html: true
       attachments: false
       twig: false
@@ -205,3 +211,4 @@ handlers:
       return_path: ''
       sender_mail: ''
       sender_name: ''
+uuid: 011fd5d7-3694-4b3c-8507-2a68a44fc044
